--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "homepage": "https://github.com/Leenert/Machbarschaft-Backend#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.9.16"
+    "mongoose": "^5.9.16",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-jwt-cookiecombo": "^1.0.5"
   }
 }
