--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.9.16",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "passport-jwt-cookiecombo": "^1.0.5"
+    "passport-jwt-cookiecombo": "^1.0.5",
+    "passport-local-mongoose": "^6.0.1"
   }
 }
