--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "machbarschaft-backend",
   "version": "0.0.1",
   "description": "NodeJS Backend for Machbarschaft",
-  "main": "index.js",
+  "engines": {
+    "node": "12.17.0"
+  },
+  "main": "main.js",
   "scripts": {
-    "start": "node app/index.js"
+    "start": "nodemon --exec babel-node main.js"
   },
   "repository": {
     "type": "git",
@@ -14,11 +17,27 @@
   "license": "GPL-3.0",
   "homepage": "https://github.com/Leenert/Machbarschaft-Backend#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^5.9.16",
-    "passport": "^0.4.1",
+    "@hapi/joi": "17.1.1",
+    "cors": "2.8.5",
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
+    "helmet": "3.22.0",
+    "mongoose": "5.9.16",
+    "passport": "0.4.1",
     "passport-jwt": "^4.0.0",
-    "passport-jwt-cookiecombo": "^1.0.5",
-    "passport-local-mongoose": "^6.0.1"
+    "passport-jwt-cookiecombo": "1.0.5",
+    "passport-local-mongoose": "6.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "7.10.2",
+    "@babel/node": "7.10.1",
+    "@babel/preset-env": "7.10.2",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb-base": "14.1.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-prettier": "3.1.3",
+    "nodemon": "^2.0.4",
+    "prettier": "2.0.5"
   }
 }
