--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
   "homepage": "https://github.com/Leenert/Machbarschaft-Backend#readme",
   "dependencies": {
     "@hapi/joi": "17.1.1",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "helmet": "3.22.0",
+    "moment": "^2.26.0",
     "mongoose": "5.9.16",
-    "passport": "0.4.1",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-jwt-cookiecombo": "1.0.5",
+    "passport-local": "^1.0.0",
     "passport-local-mongoose": "6.0.1"
   },
   "devDependencies": {
