--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "helmet": "3.22.0",
+    "joi-phone-number": "4.1.0",
     "mongoose": "5.9.16",
     "passport": "0.4.1",
     "passport-jwt": "^4.0.0",
