--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "GPL-3.0",
   "homepage": "https://github.com/Leenert/Machbarschaft-Backend#readme",
   "dependencies": {
+    "body-parser": "1.19.0",
     "cors": "2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
