--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Leenert/Machbarschaft-Backend#readme",
   "dependencies": {
     "@hapi/joi": "17.1.1",
+    "@sendgrid/mail": "^7.2.0",
     "body-parser": "1.19.0",
     "cookie-parser": "1.4.5",
     "cors": "2.8.5",
@@ -25,6 +26,7 @@
     "express": "4.17.1",
     "express-validator": "6.5.0",
     "helmet": "3.22.0",
+    "jade": "^1.11.0",
     "mongoose": "5.9.16",
     "passport": "0.4.1",
     "passport-jwt": "4.0.0",
