--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "express": "4.17.1",
     "express-validator": "6.5.0",
     "helmet": "3.22.0",
-    "jade": "^1.11.0",
+    "jade": "1.11.0",
     "mongoose": "5.9.16",
     "passport": "0.4.1",
     "passport-jwt": "4.0.0",
@@ -42,7 +42,7 @@
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-import": "2.20.2",
     "eslint-plugin-prettier": "3.1.3",
-    "nodemon": "^2.0.4",
+    "nodemon": "2.0.4",
     "prettier": "2.0.5"
   }
 }
