--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "passport-jwt-cookiecombo": "1.0.5",
     "passport-local": "1.0.0",
     "passport-local-mongoose": "6.0.1",
-    "swagger-jsdoc": "4.0.0"
+    "swagger-jsdoc": "4.0.0",
+    "twilio": "3.47.0"
   },
   "devDependencies": {
     "@babel/core": "7.10.2",
