--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "GPL-3.0",
   "homepage": "https://github.com/Leenert/Machbarschaft-Backend#readme",
   "dependencies": {
+    "@sendgrid/mail": "7.2.1",
     "body-parser": "1.19.0",
     "cookie-parser": "1.4.5",
     "cors": "2.8.5",
@@ -24,6 +25,7 @@
     "express": "4.17.1",
     "express-validator": "6.5.0",
     "helmet": "3.22.0",
+    "jade": "1.11.0",
     "mongoose": "5.9.16",
     "passport": "0.4.1",
     "passport-jwt": "4.0.0",
