--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "passport-local": "1.0.0",
     "passport-local-mongoose": "6.0.1",
     "swagger-jsdoc": "4.0.0",
-    "twilio": "3.47.0"
+    "twilio": "3.47.0",
+    "nodemon": "2.0.4",
   },
   "devDependencies": {
     "@babel/core": "7.10.2",
