--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "passport-local-mongoose": "6.0.1",
     "swagger-jsdoc": "4.0.0",
     "twilio": "3.47.0",
+    "nodemon": "2.0.4"
   },
   "devDependencies": {
     "@babel/core": "7.10.2",
