--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "main": "main.js",
   "scripts": {
-    "start": "nodemon --exec babel-node main.js"
+    "start:dev": "nodemon --exec babel-node main.js",
+    "start": "node main.js"
   },
   "repository": {
     "type": "git",
@@ -34,7 +35,6 @@
     "passport-local-mongoose": "6.0.1",
     "swagger-jsdoc": "4.0.0",
     "twilio": "3.47.0",
-    "nodemon": "2.0.4"
   },
   "devDependencies": {
     "@babel/core": "7.10.2",
