--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   },
   "main": "main.js",
   "scripts": {
-    "dev": "nodemon --exec babel-node main.js",
-    "start": "node main.js"
+    "start": "nodemon --exec babel-node main.js"
   },
   "repository": {
     "type": "git",
