--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "GPL-3.0",
   "homepage": "https://github.com/Leenert/Machbarschaft-Backend#readme",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "3.1.2",
     "@sendgrid/mail": "7.2.1",
     "body-parser": "1.19.0",
     "cookie-parser": "1.4.5",
